--- a/Mango.Web/appsettings.Development.json
+++ b/Mango.Web/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ServiceUrls": {
+    "ProductAPI": "https://localhost:7000",
+    "CouponAPI": "https://localhost:7001",
+    "AuthAPI": "https://localhost:7002",
+    "ShoppingCartAPI": "https://localhost:7003"
   }
 }
